# full-stack-udacity-projects

./: README.md
01_fyyur/: app.py  config.py  forms.py  pyproject.toml
01_fyyur/migrations/versions/: aa121df87c20_.py
01_fyyur/templates/forms/: edit_artist.html  new_artist.html  new_show.html  new_venue.html
01_fyyur/templates/pages/: show_artist.html  show_venue.html
02_trivia_api/: .gitignore  README.md
02_trivia_api/backend/: pyproject.toml  test_flaskr.py
02_trivia_api/backend/flaskr/: __init__.py
02_trivia_api/frontend/: package-lock.json  package.json
03_coffee_shop/backend/: pyproject.toml
03_coffee_shop/backend/src/database/: database.db
03_coffee_shop/frontend/: package-lock.json  package.json
03_coffee_shop_full_stack/backend/: README.md  pyproject.toml
03_coffee_shop_full_stack/backend/src/: api.py
03_coffee_shop_full_stack/backend/src/database/: database.db
03_coffee_shop_full_stack/frontend/: package-lock.json  package.json
03_coffee_shop_full_stack/frontend/src/app/services/: drinks.service.ts
03_coffee_shop_full_stack/frontend/src/environments/: environment.ts
03_coffee_shop_full_stack/starter_code/backend/: README.md
03_coffee_shop_full_stack/starter_code/backend/src/: api.py
03_coffee_shop_full_stack/starter_code/backend/src/auth/: auth.py
04_deploy_flask_kubernetes_eks/: Dockerfile  README.md  buildspec.yml  ci-cd-codepipeline.cfn.yml  pyproject.toml
