[tool.poetry]
name = "04_deploy_flask_kubernetes_eks"
version = "0.1.0"
description = ""
authors = ["MattiooFR <13595614+MattiooFR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyjwt = "^1.7.1"
flask = "^1.1.2"
gunicorn = "^20.0.4"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
