[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MattiooFR <13595614+MattiooFR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aniso8601 = "^6.0.0"
Click="^7.0"
Flask="^1.0.3"
Flask-Cors="^3.0.7"
Flask-RESTful="^0.3.7"
Flask-SQLAlchemy="^2.4.0"
itsdangerous="^1.1.0"
Jinja2="^2.10.1"
MarkupSafe="^1.1.1"
psycopg2-binary="^2.8.2"
pytz="^2019.1"
six="^1.12.0"
SQLAlchemy="^1.3.4"
Werkzeug="^0.15"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
